--- a/discord-backend/.env
+++ b/discord-backend/.env
@@ -1,7 +1,8 @@
 API_PORT=5002
 PORT=5002
 
-MONGO_URI= "mongodb://localhost:27017/talkhouse?retryWrites=true&w=majority"
+# MONGO_URI= "mongodb://localhost:27017/talkhouse?retryWrites=true&w=majority"
+MONGO_URI= "mongodb://172.28.108.99:27017/talkhouse?retryWrites=true&w=majority"
 # MONGO_URI= mongodb://host.docker.internal:27017/talkhouse?retryWrites=true&w=majority
 # MONGO_URI= mongodb://172.26.32.109:27017/talkhouse?retryWrites=true&w=majority
 # MONGO_URI= mongodb://172.28.108.215:27017/talkhouse?retryWrites=true&w=majority
